--- a/Deepshield Web-App/deepshield/web/index.html
+++ b/Deepshield Web-App/deepshield/web/index.html
@@ -20,11 +20,14 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <meta name="flutter-assets-dir" content="assets">
+
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="deepshield">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
@@ -34,5 +37,7 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="https://unpkg.com/idb@7/build/iife/index-min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </body>
 </html>
